--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </div>
             <div class="card-body">
                 <p class="card-description">Write HTML, CSS, and JavaScript together and see live previews of your web pages.</p>
-                <a href="Html.html" class="btn btn-primary">
+                <a href="myhtml.html" class="btn btn-primary">
                     <i class="fas fa-play"></i> Run HTML
                 </a>
                 <div class="offline-badge">
